[package]
name = "spindle-lib"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
description = "Simple and efficient expression and byte sequence generator for fuzz testing."
license = "Apache-2.0"
homepage = "https://github.com/awslabs/spindle"
repository = "https://github.com/awslabs/spindle"
readme = "README.md"
keywords = ["arbitrary", "testing", "fuzz", "parsing", "serialization"]

[dependencies]
arbitrary = "1.4.1"
enum-iterator = "2.1.0"
fxhash = "0.2.1"
itoa = "1.0.11"
regex-syntax = { version = "0.8.5", default-features = false, features = ["std"] }
ryu = "1.0.20"
peg = "0.8.5"

[dev-dependencies]
rand = "0.9.0"
regex = { version = "1.11", default-features = false, features = ["std", "unicode"] }

[profile.release]
# debug = "limited"